--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="octanetsolutions_logo-removebg-preview.png" alt="Octanet Logo"> <!-- Replace with actual logo file -->
+                <img src="octanetsolutions_logo-removebg-preview.png" alt="Octanet Logo"> 
             </div>
             <nav>
                 <ul>
